k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: benakun
  labels:
    app.kubernetes.io/name: benakun
